fix: flex wrap gap
theoretically this should be 0.75 but 0.5 looked better

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -403,7 +403,7 @@ sup {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 1em;
+    gap: 0.5em 1em;
 }
 
 .run-details > div {
